--- a/index.html
+++ b/index.html
@@ -347,6 +347,33 @@
                     icon: "fas fa-chart-line",
                     github: "#",
                     demo: "https://amirmero1.github.io/-/"
+                },
+                {
+                    title: "Gymawy",
+                    description: "Professional gym website with modern design, classes schedule, pricing plans, gallery, trainers section, and contact form. Fully responsive and interactive.",
+                    technologies: ["HTML", "CSS", "Bootstrap", "JavaScript"],
+                    gradient: "from-red-500 to-orange-500",
+                    icon: "fas fa-dumbbell",
+                    github: "https://github.com/at-tech1/Gymawy",
+                    demo: "https://at-tech1.github.io/Gymawy/"
+                },
+                {
+                    title: "Smakito",
+                    description: "Elegant restaurant & cafe website with online menu, reservation system, photo gallery, events, and location integration. Responsive and beautiful design.",
+                    technologies: ["HTML", "CSS", "Bootstrap", "JavaScript"],
+                    gradient: "from-green-500 to-teal-500",
+                    icon: "fas fa-utensils",
+                    github: "https://github.com/at-tech1/smakito",
+                    demo: "https://at-tech1.github.io/smakito/"
+                },
+                {
+                    title: "Company Portfolio",
+                    description: "Modern corporate website showcasing services, team, portfolio, and contact. Clean, professional, and fully responsive design.",
+                    technologies: ["HTML", "CSS", "Bootstrap", "JavaScript"],
+                    gradient: "from-blue-500 to-indigo-500",
+                    icon: "fas fa-building",
+                    github: "https://github.com/at-tech1/Company",
+                    demo: "https://at-tech1.github.io/Company/"
                 }
             ]
         };
@@ -399,7 +426,7 @@
                         </div>
                         <div class="flex space-x-3">
                             <a href="${project.github}" class="text-[var(--secondary)] hover:text-[var(--accent)]"><i class="fab fa-github"></i> Code</a>
-                            <a href="${project.demo}" class="text-[var(--secondary)] hover:text-[var(--accent)]"><i class="fas fa-external-link-alt"></i> ${project.title.includes('App') ? 'App Store' : 'Live Demo'}</a>
+                            <a href="${project.demo}" class="text-[var(--secondary)] hover:text-[var(--accent)]"><i class="fas fa-external-link-alt"></i> Live Demo</a>
                         </div>
                     </div>
                 </div>
